GD - 01/08/18 - Refactor generale. Inserimento dei link nei record di output per la reindirizzazione diretta o indiretta al bookmaker.